fix: adjust width to max-width for about order site and enable flex-wrap for social links

--- a/css/section-about.css
+++ b/css/section-about.css
@@ -17,7 +17,7 @@
 }
 
 .about-order-site {
-  width: 350px;
+  max-width: 350px;
   margin: 50px auto 30px;
   display: flex;
   align-items: center;
@@ -74,6 +74,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
   gap: 15px;
 }
 .about-social {
